Add config option to disable selectable shapes